--- a/app/home/home.component.html
+++ b/app/home/home.component.html
@@ -1,5 +1,8 @@
 <div class="col-md-6 col-md-offset-3">
     <h1>Home</h1>
-    <button (click)="sendMessage()">Send Message</button>
-    <button (click)="clearMessage()">Clear Message</button>
+    <button (click)="sendMessage1()">Send To queue1</button>
+    <button (click)="clearMessage1()">Clear queue1</button>
+    <br/>
+    <button (click)="sendMessage2()">Send To queue2</button>
+    <button (click)="clearMessage2()">Clear queue2</button>
 </div>
